# Projects

./: .gitignore
HW9_2,3,4Reitinger/HW9_Reitinger/src/at/aau/emmt/: SubPixelMotionVector.java
HandsOnRobotics/ExampleBluePillProject/: CMakeLists.txt  README.md  blue_pill.tar  main.cpp
HandsOnRobotics/VisualPerceptionProject/: CMakeLists.txt  main.cpp
HandsOnRobotics/VisualPerceptionProject/include/: FeatureTracker.hpp  MapInitializer.hpp  MapManager.hpp  PerspectiveVisualizer.hpp  PoseEstimator.hpp  Visualizer.hpp
HandsOnRobotics/VisualPerceptionProject/src/: FeatureTracker.cpp  MapInitializer.cpp  MapManager.cpp  PerspectiveVisualizer.cpp  PoseEstimator.cpp  Visualizer.cpp
HandsOnRobotics/VisualPerceptionProject/tests/: generate_synthetic_video.cpp  test_initializer.cpp  test_pose.cpp  test_tracker.cpp
Lab Autonomous Car/Exercise 2/: CV_Autonomous_Driving_2026_Feature_Extraction.ipynb
Software Engineering/HW3/: FEEDBACK.md  Presentation.pptx  README.md  main.py
Software Engineering/HW3/rover/: __init__.py  actuators.py  communication.py  computer.py  control.py  lab.py  pmu.py  sensors.py  state.py
